<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TELAS.RegisterActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"

            android:hint="Nome Completo"

            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textName" />
    <EditText
            android:id="@+id/Sangue"
            android:layout_width="148dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="24dp"
            android:maxLength="3"
            android:hint="@string/tipo_sanguineo"

            android:imeOptions="actionDone"

            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:id="@+id/Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:imeOptions="actionDone"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:id="@+id/editSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="Confirmar"
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="224dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/buttonastro"
            app:layout_constraintTop_toBottomOf="@+id/editSenha"
            app:layout_constraintHorizontal_bias="0.498"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorLetra"
            android:onClick="onClick"/>
</android.support.constraint.ConstraintLayout>